Added a sequential mol2 reader into general (newer and replaced mol2reader.ipynb)

--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -211,7 +211,162 @@
     "            thismols=mainloader.getNext(batch_mols,as_smiles=False)\n",
     "    \n",
     "    if post is not None: ret=[post(v) for v in ret]\n",
-    "    return np.array(ret)"
+    "    return np.array(ret)\n",
+    "\n",
+    "def largest_dissimilar_subset(simmat_,cutoff=0.7,tries=25000,skip=None,silent=False):\n",
+    "    simmat=simmat_+np.eye(len(simmat_))\n",
+    "    final_sel=[]\n",
+    "    for t in range(tries):\n",
+    "        sel=[]\n",
+    "        allowed=np.ones(len(simmat)).astype(bool)\n",
+    "        if skip is not None: allowed[skip]=False\n",
+    "        idx_list=np.arange(len(simmat))\n",
+    "        while np.any(allowed):\n",
+    "            ch=np.random.choice(idx_list[allowed])\n",
+    "            sel.append(ch)\n",
+    "            #close_idx=np.where()[0]\n",
+    "            allowed[simmat[ch]>=cutoff]=False\n",
+    "        if not silent and (t%250==0): print(\"Try\",t,\"picked\",len(sel),\"ligands\")\n",
+    "        if len(sel)>len(final_sel):\n",
+    "            final_sel=sel\n",
+    "    return final_sel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "781e5bbd-38a4-4ef4-929e-d33e9a76493a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Mol2FileLoaded:\n",
+    "    def __init__(self,file,include_comments=True,comment_char='#'):\n",
+    "        if type(file)==str:\n",
+    "            if \"\\n\" in file: file=file.split(\"\\n\")\n",
+    "            else: file=list(open(file,\"r\").readlines())\n",
+    "        elif type(file)==list or type(file)==tuple: pass\n",
+    "        else:\n",
+    "            try: file=list(file.readlines())\n",
+    "            except: print(\"Assuming input is iterable\")\n",
+    "\n",
+    "        self.sections=dict()\n",
+    "        self.header_comments=[]\n",
+    "        self.comment_char=comment_char\n",
+    "        self.record_comments=include_comments # All comments move to header\n",
+    "        \n",
+    "        self.load_lines(file)\n",
+    "\n",
+    "    def load_lines(self,file):\n",
+    "        sec=None\n",
+    "        for l in file:\n",
+    "            l=l.strip()\n",
+    "            if l[0]==self.comment_char:\n",
+    "                if self.record_comments: self.header_comments.append(l)\n",
+    "                continue\n",
+    "            if len(l)<3: continue\n",
+    "            \n",
+    "            if l.startswith(\"@<TRIPOS>\"):\n",
+    "                l=l.replace(\"@<TRIPOS>\",\"\").strip()\n",
+    "                sec=l\n",
+    "                self.sections[sec]=[]\n",
+    "                continue\n",
+    "            if sec is None: raise ValueError(\"Non-comment lines before and @<TRIPOS> entries!\")\n",
+    "            self.sections[sec].append(l)\n",
+    "\n",
+    "    def reconstructMol2Block(self):\n",
+    "        ret=\"\"\n",
+    "        for l in self.header_comments: ret+=l+\"\\n\"\n",
+    "        for s in self.sections:\n",
+    "            ret+=\"@<TRIPOS>\"+s+\"\\n\"\n",
+    "            for l in self.sections[s]: ret+=l+\"\\n\"\n",
+    "        return ret\n",
+    "\n",
+    "    def computeNetCharge(self):\n",
+    "        q=0\n",
+    "        for l in self.sections[\"ATOM\"]:\n",
+    "            l=l.strip().split(\" \")[-1]\n",
+    "            q+=float(l)\n",
+    "        return q\n",
+    "\n",
+    "    def extractName(self): return self.sections[\"MOLECULE\"][0].strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b9b0270a-701e-42ff-90ec-3eae326dd259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SequentialMol2Loader:\n",
+    "    def __init__(self,filename,attach_names=False,default_batch=1,max_mols=-1,comment_char='#'):\n",
+    "        self.filename=filename\n",
+    "        if type(filename)==str: self.file=open(filename,\"r\")\n",
+    "        else:\n",
+    "            raise ValueError(\"Input to SequentialMol2Loader should be a mol2 filename\")\n",
+    "        self.counter=0\n",
+    "        self.name=attach_names\n",
+    "        self.ended=False\n",
+    "        self.default_batch=default_batch\n",
+    "        self.mollim=max_mols\n",
+    "        self.skipcount=0\n",
+    "        self.comment_char=comment_char\n",
+    "        self.new_header=self.skimTop()\n",
+    "\n",
+    "    def getFilename(self): return self.filename\n",
+    "    def restartSequence(self,keep_location=False):\n",
+    "        ret=SequentialMol2Loader(self.filename,self.name,self.default_batch)\n",
+    "        if keep_location: ret.skipNext(self.counter)\n",
+    "        return ret\n",
+    "\n",
+    "    def skimTop(self):\n",
+    "        ret=[]\n",
+    "        for l in self.file:\n",
+    "            l=l.strip()\n",
+    "            if l[0]==self.comment_char:\n",
+    "                ret.append(l)\n",
+    "                continue\n",
+    "            if len(l)<3: continue\n",
+    "            break\n",
+    "        return ret\n",
+    "    def readNextBlock(self):\n",
+    "        self.header=self.new_header\n",
+    "        self.new_header=[]\n",
+    "        lines=[]\n",
+    "        for l in self.file:\n",
+    "            l=l.strip()\n",
+    "            if l[0]==self.comment_char:\n",
+    "                if len(lines): self.new_header.append(l)\n",
+    "                else: self.header.append(l)\n",
+    "                continue\n",
+    "            if \"@<TRIPOS>MOLECULE\" in l:\n",
+    "                break\n",
+    "            else: lines.append(l)\n",
+    "        else: self.ended=True\n",
+    "        print(\"Done\")\n",
+    "        final_lines=self.header+[\"@<TRIPOS>MOLECULE\"]+lines\n",
+    "        self.counter+=1\n",
+    "        return final_lines\n",
+    "\n",
+    "    def skipNext(self,num):\n",
+    "        for _ in range(num): _ = self.readNextBlock()\n",
+    "    def getNext(self,num=0,as_text=False):\n",
+    "        if num==0: num=self.default_batch\n",
+    "        ret=[]\n",
+    "        if self.name: names=[]\n",
+    "        if self.ended: return None\n",
+    "        \n",
+    "        for i in range(num):\n",
+    "            m2b=self.readNextBlock()\n",
+    "            if not as_text: m2b=Mol2FileLoaded(m2b,comment_char=self.comment_char)\n",
+    "            if self.name:\n",
+    "                if as_text: molname=m2b[m2b.find(\"@<TRIPOS>MOLECULE\")+1].strip()\n",
+    "                else: molname=m2b.extractName()\n",
+    "            ret.append(m2b)\n",
+    "            if self.name: names.append(molname)\n",
+    "            if self.mollim>0 and self.counter>=mollim: self.ended=True\n",
+    "        if self.name: return ret,names\n",
+    "        else: return ret"
    ]
   },
   {
@@ -274,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
