Added full similarity matrix calculation to General

--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -213,6 +213,44 @@
     "    if post is not None: ret=[post(v) for v in ret]\n",
     "    return np.array(ret)\n",
     "\n",
+    "def getSimilarityMatrix(smilesloader,default=np.nan,fingerprint=Chem.RDKFingerprint,similarity=Chem.DataStructs.TanimotoSimilarity,precompute_fps=False,batch_mols=0,num_mols=None,force_diagonal=None):\n",
+    "    fullsmiload=copy.deepcopy(smilesloader)\n",
+    "    if num_mols is None:\n",
+    "        if fullsmiload.linecount is None: raise ValueError(\"Can't have no line counting in the SMILES loader for full matrix. If you want to use this approach, pass no. of molecules as num_mols=... togetSimilarityMatrix\")\n",
+    "        else: num_mols=int(smilesloader.linecount)\n",
+    "    if precompute_fps:\n",
+    "        fps=[fingerprint(s) for s in fullsmiload.drain(as_smiles=False)]\n",
+    "        num_mols=len(fps)\n",
+    "        simmat=np.ones((num_mols,num_mols),dtype=float)*default\n",
+    "        for fpi,fp in enumerate(fps):\n",
+    "            simvec=Chem.DataStructs.BulkTanimotoSimilarity(fp,fps)\n",
+    "            assert (simvec[fpi]>=0.999), \"Internal error occurred in getSimilarityMatrix. Self-fingerprint of ligand \"+str(fpi)+\" is not 1\"\n",
+    "            if force_diagonal is not None: simvec[fpi]=force_diagonal\n",
+    "            simmat[fpi]=simvec\n",
+    "    else:\n",
+    "        simmat=np.ones((num_mols,num_mols),dtype=float)*default\n",
+    "        print(\"WARN: Full similarity matrix without precompute_fps will be slow\")\n",
+    "        mainloader=smilesloader.restartSequence(keep_location=True)\n",
+    "        \n",
+    "        thismols=mainloader.getNext(batch_mols,as_smiles=False)\n",
+    "        mainindex=0\n",
+    "        while thismols is not None:\n",
+    "            #print(mainindex,\"of\",num_mols)\n",
+    "            mainfps=[fingerprint(m) for m in thismols]\n",
+    "            subloader=smilesloader.restartSequence(keep_location=True)\n",
+    "            submols=subloader.getNext(batch_mols,as_smiles=False)\n",
+    "            index=0\n",
+    "            while submols is not None:\n",
+    "                subfps=[fingerprint(s) for s in submols]\n",
+    "                for fpi,fp in enumerate(mainfps):\n",
+    "                    simvec=Chem.DataStructs.BulkTanimotoSimilarity(fp,subfps)\n",
+    "                    simmat[mainindex+fpi,index:index+len(subfps)]=simvec\n",
+    "                index+=len(submols)\n",
+    "                submols=subloader.getNext(batch_mols,as_smiles=False)\n",
+    "            mainindex+=len(mainfps)\n",
+    "            thismols=mainloader.getNext(batch_mols,as_smiles=False)\n",
+    "    return simmat\n",
+    "\n",
     "def largest_dissimilar_subset(simmat_,cutoff=0.7,tries=25000,skip=None,silent=False):\n",
     "    simmat=simmat_+np.eye(len(simmat_))\n",
     "    final_sel=[]\n",
