Updated and fixed General

--- a/CADD/General.ipynb
+++ b/CADD/General.ipynb
@@ -73,6 +73,7 @@
     "        \n",
     "        if self.file is None:\n",
     "            retn=[]\n",
+    "            retm=[]\n",
     "            while len(retn)<num or num<0:\n",
     "                self.counter+=1\n",
     "                if self.counter>=len(self.filename) or (self.mollim>0 and self.counter>=self.mollim):\n",
@@ -84,8 +85,10 @@
     "                        curmol=Chem.MolFromSmiles(curmol)\n",
     "                    except:\n",
     "                        continue\n",
+    "                if self.name: retm.append(self.name[self.counter])\n",
     "                retn.append(curmol)\n",
-    "            return retn\n",
+    "            if self.name: return retn,retm\n",
+    "            else: return retn\n",
     "            \n",
     "        for ln in self.file:\n",
     "            ln=ln.strip().split()\n",
@@ -219,7 +222,9 @@
     "        if fullsmiload.linecount is None: raise ValueError(\"Can't have no line counting in the SMILES loader for full matrix. If you want to use this approach, pass no. of molecules as num_mols=... togetSimilarityMatrix\")\n",
     "        else: num_mols=int(smilesloader.linecount)\n",
     "    if precompute_fps:\n",
-    "        fps=[fingerprint(s) for s in fullsmiload.drain(as_smiles=False)]\n",
+    "        mols=fullsmiload.drain(as_smiles=False) if not fullsmiload.name else fullsmiload.drain(as_smiles=False)[0]\n",
+    "        fps=[Chem.RDKFingerprint(m) for m in mols]\n",
+    "        del mols\n",
     "        num_mols=len(fps)\n",
     "        simmat=np.ones((num_mols,num_mols),dtype=float)*default\n",
     "        for fpi,fp in enumerate(fps):\n",
@@ -251,7 +256,7 @@
     "            thismols=mainloader.getNext(batch_mols,as_smiles=False)\n",
     "    return simmat\n",
     "\n",
-    "def largest_dissimilar_subset(simmat_,cutoff=0.7,tries=25000,skip=None,silent=False):\n",
+    "def largest_dissimilar_subset(simmat_,cutoff=0.7,tries=25000,skip=None,silent=False,print_freq=250):\n",
     "    simmat=simmat_+np.eye(len(simmat_))\n",
     "    final_sel=[]\n",
     "    for t in range(tries):\n",
@@ -264,7 +269,7 @@
     "            sel.append(ch)\n",
     "            #close_idx=np.where()[0]\n",
     "            allowed[simmat[ch]>=cutoff]=False\n",
-    "        if not silent and (t%250==0): print(\"Try\",t,\"picked\",len(sel),\"ligands\")\n",
+    "        if not silent and (t%print_freq==0): print(\"Try\",t,\"picked\",len(sel),\"ligands\")\n",
     "        if len(sel)>len(final_sel):\n",
     "            final_sel=sel\n",
     "    return final_sel"
